--- a/Fronted_Portfolio/package.json
+++ b/Fronted_Portfolio/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "dayjs": "^1.11.19",
+    "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
