--- a/Fronted_Portfolio/.eslintrc.json
+++ b/Fronted_Portfolio/.eslintrc.json
@@ -1,11 +1,51 @@
+// {
+//   "env": {
+//     "browser": true,
+//     "es2021": true,
+//     "node": true
+//   },
+//   "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:prettier/recommended"],
+//   "plugins": ["react", "prettier"],
+//   "rules": {
+//     "prettier/prettier": [
+//       "error",
+//       {
+//         "singleQuote": false,
+//         "semi": true,
+//         "tabWidth": 2,
+//         "printWidth": 100
+//       }
+//     ]
+//   },
+//   "settings": {
+//     "react": {
+//       "version": "detect"
+//     }
+//   }
+// }
+
+
+
 {
   "env": {
     "browser": true,
     "es2021": true,
     "node": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:prettier/recommended"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
+    "plugin:prettier/recommended"
+  ],
   "plugins": ["react", "prettier"],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
   "rules": {
     "prettier/prettier": [
       "error",
@@ -13,9 +53,11 @@
         "singleQuote": false,
         "semi": true,
         "tabWidth": 2,
-        "printWidth": 100
+        "printWidth": 100,
+        "endOfLine": "lf"
       }
-    ]
+    ],
+    "react/react-in-jsx-scope": "off"
   },
   "settings": {
     "react": {
