--- a/Fronted_Portfolio/package.json
+++ b/Fronted_Portfolio/package.json
@@ -41,6 +41,9 @@
     "*.{js,jsx,ts,tsx}": [
       "eslint --fix",
       "prettier --write"
-    ]
+    ],
+  "*.{css,html}": [
+    "prettier --write"
+  ]
   }
 }
