--- a/Fronted_Portfolio/package.json
+++ b/Fronted_Portfolio/package.json
@@ -13,19 +13,21 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.17",
     "dayjs": "^1.11.19",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-icons": "^5.5.0",
-    "tailwindcss": "^4.1.17"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "autoprefixer": "^10.4.22",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
@@ -34,7 +36,9 @@
     "globals": "^16.5.0",
     "husky": "^8.0.0",
     "lint-staged": "^16.2.7",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "tailwindcss": "^4.1.17",
     "vite": "^7.2.4"
   },
   "lint-staged": {
@@ -42,8 +46,8 @@
       "eslint --fix",
       "prettier --write"
     ],
-  "*.{css,html}": [
-    "prettier --write"
-  ]
+    "*.{css,html}": [
+      "prettier --write"
+    ]
   }
 }
