--- a/Fronted_Portfolio/package.json
+++ b/Fronted_Portfolio/package.json
@@ -17,11 +17,13 @@
     "@tailwindcss/vite": "^4.1.17",
     "dayjs": "^1.11.19",
     "gsap": "^3.13.0",
+    "immer": "^11.0.1",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
-    "react-tooltip": "^5.30.0"
+    "react-tooltip": "^5.30.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
